# ert

./: CMakeLists.txt
include/ecr/: allocator.h  error.h  version.h
include/ecr/allocator/: standard.h
include/ecr/macro/: assume.h  attributes.h  guards.h
libs/io/: CMakeLists.txt
libs/io/examples/: CMakeLists.txt
libs/io/examples/echo/: echo.c
libs/io/examples/helloworld/: helloworld.c
libs/io/include/ecr/: buffer.h  stream.h
libs/io/include/ecr/stream/: fd.h  file.h  formatted.h
libs/io/src/stream/: fd.c  file.c  formatted.c  posix.c  posix.h
src/: error.c
tests/: CMakeLists.txt
tests/allocator/: allocator_test.hpp  standard_allocator_test.cpp
